# datasets

./: Cargo.toml  README.md
benches/: dataset.rs  mnist.rs
examples/: babi.rs  imdb_reviews.rs  mnist.rs
src/: dataset.rs  image.rs  lib.rs  text.rs  utils.rs
src/image/: mnist.rs
src/text/: babi.rs  enron.rs  imdb.rs  imdb_reviews.rs  shakespeare.rs
