[package]
name = "datasets"
version = "0.1.0"
authors = ["Suyash <suyash93@protonmail.com>"]
edition = "2018"

[dependencies]
dirs = "1.0.4"
flate2 = { version = "1.0.6", default-features = false, features = ["zlib"] }
indicatif = "0.11.0"
rand = "0.6.4"
rand_xorshift = "0.1.1"
reqwest = "0.9.8"
tar = "0.4.20"
regex = "1.1.0"

[dev-dependencies]
image = "0.21.0"
